--- a/index.html
+++ b/index.html
@@ -5,67 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
-    <!-- <style>
-        .display{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .container{
-            padding: 35px 30px;
-        }
 
-        .svg-header{
-            padding-bottom: 150px;
-
-        }
-        .header-text{
-            font-size: 25px;
-            margin: 0;
-        }
-
-        .button-area{
-            padding-top: 40px;
-        }
-
-        .text-button{
-            width: 90px;
-            font-size: 13px;
-            padding: 6px 15px;
-            border-radius: 25px;
-        }
-        .slide{
-            display: block;
-            height: 200px;
-            w
-        }
-    </style> -->
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <div class="svg-header display">
-                <a href="pages/callMenu.html">
-                <svg class="menu" xmlns="http://www.w3.org/2000/svg" width="35" height="14" viewBox="0 0 35 14">
+            <div class="display">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="10" viewBox="0 0 35 14">
                     <g fill="#000000" fill-rule="evenodd">
                     <rect width="35" height="4" rx="2"/>
                     <path d="M2,10 L21,10 C22.1045695,10 23,10.8954305 23,12 C23,13.1045695 22.1045695,14 21,14 L2,14 C0.8954305,14 1.3527075e-16,13.1045695 0,12 C-1.3527075e-16,10.8954305 0.8954305,10 2,10 Z"/>
                     </g>
                 </svg>
-            </a>
-                <svg class="circle" width="40" height="40">
-                    <circle cx="20" cy="20" r="19" stroke-width="3" style="fill: indigo; stroke:orange;fill-rule:evenodd; float:right; opacity:0.5""/>
+                <svg width="30" height="30">
+                    <circle cx="15" cy="15" r="14" stroke-width="3" style="fill: indigo; stroke:orange;fill-rule:evenodd; float:right; opacity:0.5""/>
                 </svg>
             </div>
-            <h1 class="header-text">Bonjour, voulez-vous vous faire consulter?</h1>   
+            <h1>Bonjour, voulez-vous vous faire consulter?</h1>
         </div>
+
         <div class="button-area display">
-            <h4 style="margin: 0; display:block;">Choisissez <br>une catégorie</h4>
+            <h4>Choisissez <br>une catégorie</h4>
             <button class="text-button" style="background-color: indigo; color:aliceblue; opacity: 0.5;">Adulte</button>
             <button class="text-button" style="background-color: rgb(228, 228, 228); color:black; opacity: 0.5;">Enfant</button>
         </div>
-        <div class="side display">
-            <div class="slide"><p>Covid-19 et Virus</p></div>
+    </div>
+
+        <div class="card-group displa">
+            <div class="card" style="background-color: mediumorchid; color:aliceblue; opacity: 0.5;"><span>Covid-19<br>et Virus</span></div>
+            <div class="card" style="background-color: indigo; color:aliceblue; opacity: 0.5;"><span>Rhume<br>ou Grippe</span></div>
+            <div class="card" style="background-color: red; color:aliceblue; opacity: 0.5;"><span>Rhume<br>ou Grippe</span></div>
+        
+        </div>
+
+    <div class="container">
+        <div class="botton-page">
+            <h4>Recherchez par spécialité</h4>
+            <div class="display" style="padding-top: 20px">
+                <button onclick="window.location.href='pages/callMenu.html'" class="icon-button display">
+                    <svg width="55" height="40">
+                        <rect x="0" y="0" rx="15" ry="15" width="40" height="40"
+                        style="fill:indigo;opacity:0.5" />
+                    </svg>
+                    <span><h4>Docteur<br>Generaliste</h4></span>
+                </button>
+                <button onclick="window.location.href='pages/callMenu.html'" class="icon-button display" style="margin-left: 10px;">
+                    <svg width="55" height="40">
+                        <rect x="0" y="0" rx="15" ry="15" width="40" height="40"
+                        style="fill:mediumorchid;opacity:0.5" />
+                    </svg>
+                    <span><h4>Specialiste<br>dentaire</h4></span>
+                </button>
+            </div>
         </div>
     </div>
     
